5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4352/executions/1613_2049.log
== TEST (2019-03-29 10:27:21) 
-- CODE:
x = int(input("digite um dividendo: "))
y = int(input("digite um divisor: "))
dividendo = x
divisor = y
quociente = x/y
resto = x%y
print(dividendo)
print(divisor)
print(quociente)
print(resto)
-- OUTPUT:
8
5
1.6
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 10:27:38) 
-- CODE:
x = int(input("digite um dividendo: "))
y = int(input("digite um divisor: "))
dividendo = x
divisor = y
quociente = x/y
resto = x%y
print(dividendo)
print(divisor)
print(quociente)
print(resto)
-- EXECUTION TIME:
0.164652
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
8
5
1.6
3
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
14
2
7.0
0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
347
2
173.5
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 10:28:12) 
-- CODE:
x = int(input("digite um dividendo: "))
y = int(input("digite um divisor: "))
quociente = x/y
resto = x%y
print(x)
print(y)
print(quociente)
print(resto)
-- OUTPUT:
8
5
1.6
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 10:29:16) 
-- CODE:
x = int(input("digite um dividendo: "))
y = int(input("digite um divisor: "))
quociente = x // y
resto = x % y
print(x)
print(y)
print(quociente)
print(resto)
-- OUTPUT:
8
5
1
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 10:30:13) 
-- CODE:
x = int(input("digite um dividendo: "))
y = int(input("digite um divisor: "))
dividendo = x
divisor = y
resto = x % y
print(x)
print(y)
print(quociente)
print(resto)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(quociente)
NameError: name 'quociente' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 10:30:30) 
-- CODE:
x = int(input("digite um dividendo: "))
y = int(input("digite um divisor: "))
dividendo = x
divisor = y
quociente = x // y
resto = x % y
print(x)
print(y)
print(quociente)
print(resto)
-- OUTPUT:
8
5
1
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 10:30:37) 
-- CODE:
x = int(input("digite um dividendo: "))
y = int(input("digite um divisor: "))
dividendo = x
divisor = y
quociente = x // y
resto = x % y
print(x)
print(y)
print(quociente)
print(resto)
-- OUTPUT:
8
5
1
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 10:31:16) 
-- CODE:
x = int(input("digite um dividendo: "))
y = int(input("digite um divisor: "))
dividendo = x
divisor = y
quociente = x // y
resto = x % y
print(dividendo)
print(divisor)
print(quociente)
print(resto)
-- OUTPUT:
8
5
1
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 10:31:20) 
-- CODE:
x = int(input("digite um dividendo: "))
y = int(input("digite um divisor: "))
dividendo = x
divisor = y
quociente = x // y
resto = x % y
print(dividendo)
print(divisor)
print(quociente)
print(resto)
-- OUTPUT:
8
5
1
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 10:31:36) 
-- CODE:
x = int(input("digite um dividendo: "))
y = int(input("digite um divisor: "))
dividendo = x
divisor = y
quociente = x // y
resto = x % y
print(dividendo)
print(divisor)
print(quociente)
print(resto)
-- EXECUTION TIME:
0.197106
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
8
5
1
3
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
14
2
7
0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
347
2
173
1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
